--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 </head>
 <body>
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/d7c04ffb-6fe2-4316-b384-d68c3036ef33/webchat/config.js" defer></script>
+<script>
+location.href = "https://mediafiles.botpress.cloud/d7c04ffb-6fe2-4316-b384-d68c3036ef33/webchat/bot.html";
+</script>
 </body>
 </html>
