--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <script>
-location.href = "https://mediafiles.botpress.cloud/d7c04ffb-6fe2-4316-b384-d68c3036ef33/webchat/bot.html";
+<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/d7c04ffb-6fe2-4316-b384-d68c3036ef33/webchat/config.js" defer></script>
 </script>
 </body>
 </html>
