--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
 </head>
 <body>
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/d7c04ffb-6fe2-4316-b384-d68c3036ef33/webchat/config.js" defer></script>
+<script>
+  window.botpressWebChat.init({
+      "composerPlaceholder": "Chat with Chat PC",
+      "botConversationDescription": "This chatbot can help you with information for computers.",
+      "botId": "d7c04ffb-6fe2-4316-b384-d68c3036ef33",
+      "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
+      "messagingUrl": "https://messaging.botpress.cloud",
+      "clientId": "d7c04ffb-6fe2-4316-b384-d68c3036ef33",
+      "webhookId": "8a132527-7718-4ca4-8d1f-6658ad40c458",
+      "lazySocket": true,
+      "themeName": "prism",
+      "botName": "Chat PC",
+      "avatarUrl": "https://i.ibb.co/1TfB8gn/25505094453-cebb9677a2-o.jpg",
+      "termsConditions": "https://www.gnu.org/licenses/gpl-3.0.html",
+      "stylesheet": "https://webchat-styler-css.botpress.app/prod/58f4ee74-923c-40e1-9051-f213e6403ec5/v77204/style.css",
+      "frontendVersion": "v1",
+      "useSessionStorage": true,
+      "showBotInfoPage": true,
+      "enableConversationDeletion": true,
+      "theme": "prism",
+      "themeColor": "#2563eb"
+  });
+</script>
 </body>
 </html>
