--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  
+  <link rel="stylesheet" href="styles.css">
+  <title>Chat PC</title>
 </head>
 <body>
   <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
