--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-  <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<head>
+  		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  
-  <link rel="stylesheet" href="styles.css">
-  <title>Chat PC</title>
-</head>
-<body>
-  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/deb9dbcc-f141-4e54-9776-2786df327067/webchat/config.js" defer></script>
-</body>
-</html>
+		<title>Chat PC</title>
+  		<link rel="icon" type="image/x-icon" href="chatbot/avatar.ico">
+  		<link rel="stylesheet" href="styles.css">
+	</head>
+	
+	<body>
+		<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+		<script src="https://mediafiles.botpress.cloud/deb9dbcc-f141-4e54-9776-2786df327067/webchat/config.js" defer></script>
+	</body>
+	</html>
 
 
