--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <body> 
   <!-- Chatbot -->
-<script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-<script src="https://files.bpcontent.cloud/2025/02/26/16/20250226164515-EDC3QMNH.js"></script>
+  <div id="webchat">
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/02/26/16/20250226164515-EDC3QMNH.js"></script>
+  </div>
   
   <div class="menu">
     <a onclick="togglePopup('popup-1')" href="#one">1</a>
