--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-
-
-  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-  <script src="https://mediafiles.botpress.cloud/d0e5035e-3a41-4dc6-a6b1-60b242013259/webchat/config.js" defer></script>
-
 </head>
 
 <body>
 
+  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/02/26/16/20250226164515-EDC3QMNH.js"></script>
+    
   <div class="menu">
     <a onclick="togglePopup('popup-1')" href="#one">1</a>
     <a onclick="togglePopup('popup-2')" href="#two">2</a>
