Update advert materials.

--- a/open_project.html
+++ b/open_project.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <script>
-window.location.href = 'https://arcg.is/LnLDT';
+window.location.href = 'https://arcg.is/Ginm80';
 </script>
 </body>
 </html>
