--- a/chatbot/ChatPC-amd64.html
+++ b/chatbot/ChatPC-amd64.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <script>
-window.location.href = 'https://minedusci-my.sharepoint.com/:u:/g/personal/ml02743288_edu_mon_bg/EX10Q0pOVfJLuM5suexiTooBkkkvnQEixVh2-7g3GDbirg?e=4gZIgd';
+window.location.href = 'https://github.com/GisRocket/HistoryOfAI/releases/download/2.1-beta-2/ChatPC-2-1-setup-amd64.exe';
 </script>
 </body>
 </html>
